--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eliftech_test_task",
+  "name": "duplomna",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,17 +7,18 @@
     "node": "16.14.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",        
+    "bson": "^4.6.3",
     "cors": "^2.8.5",
-    "mongodb": "^4.5.0",
+    "express": "^4.18.1",
     "moment": "^2.29.3",
-    "mongoose": "^6.3.3"   
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.3.3",
+    "nodemailer": "^6.7.5"
   }
 }
-    
