--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "16.14.2"
+    "node": "17.0.1"
   },
   "scripts": {
     "start": "node server.js"
@@ -13,12 +13,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bson": "^4.6.3",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "moment": "^2.29.3",
-    "mongodb": "^4.5.0",
-    "mongoose": "^6.3.3",
-    "nodemailer": "^6.7.5"
+    "express": "^4.18.1"
   }
 }
